--- a/estilo.css
+++ b/estilo.css
@@ -13,6 +13,9 @@ header{
 	color:#fff;
 	text-align: right;
 	padding-right: 30px;
+	position: fixed;
+	width: 100%;
+	margin-top: -80px;
 }
 .head{
 	text-decoration: none;
@@ -20,50 +23,66 @@ header{
 	margin-left: 15px;
 }
 a:hover{
-	text-decoration: underline;
-}
+	text-decoration: none;
+	color: darkgrey;
+}	
 .corpo{
 	text-align: center;
 	margin-top: 75px;
 }
 .perfil{
-	width: 10%;
+	width: 15%;
 	border-radius: 50%;
-	margin-top: 45px;
-	margin-bottom: 50px;
+	margin-top: 25px;
+	margin-bottom: 10px;
 	box-shadow: 10px 10px 5px darkgrey;
 }
-.html{
-	float: left;
-	width: 45%;
-	margin-top: 35px;
-	margin-right: -25px;
-}
-.desc{
-	float: right;
-	margin-top: 70px;
-	padding-right: 50px;
+img[class=perfil]:hover{
+	width: 20%;
 }
 h1{
 	font-size: 70px;
-	margin-top: -40px;
+	margin-top: 0;
+}
+p[class*=p]::first-letter{
+	font-size: 40px;
 }
 .p1{
 	font-size: 25px;
 	margin: 0 3% 0 3%;
 }
+div[class="col-1-2"]>div{
+	padding: 15px;
+}
 .p2{
 	font-size: 30px;
 }
-.p3{
-	font-size: 25px;
+form>p{
+	font-size: 35px;
 }
-.p4{
+.p3{
+	font-size: 30px;
+	color:#fff;
+}
+div[class="col-1-4"] a img:hover{
+	box-shadow: 3px 3px 3px lightgrey;
+}
+div[class="col-1-4"] a img{
+	border-radius: 5px;
+}
+.b4{
 	font-size: 25px;
 	margin-left: 25px;
+	margin-bottom: 5px;
 }
 .art{
-	margin-top: 30%;
+	margin-top: 40px;
+}
+.trab{
+	background-color: black;
+	padding: 40px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 .foot{
 	background-color: black;
@@ -84,21 +103,15 @@ form{
 	margin-top: 30px;
 }
 input[type="ddd"]{
-	width: 30px;
+	width: 60px;
 	margin-right: 7px;
-	box-shadow: 3px 3px 3px lightgrey;
-}
-input[type="phone"]{
-	box-shadow: 3px 3px 3px lightgrey;
 }
 input[type="name"]{
-	width: 200px;
+	width: 400px;
 	margin-top: 7px;
-	box-shadow: 3px 3px 3px lightgrey;
 }
 input[type="email"]{
-	width: 200px;
-	box-shadow: 3px 3px 3px lightgrey;
+	width: 400px;
 }
 input[type="submit"]{
 	width: 215px;
@@ -112,11 +125,21 @@ input[type="submit"]{
 input{
 	padding: 5px;
 	margin-bottom: 9px;
+	border-radius: 3px;
+}
+input:focus{
+	border: solid 3px black;
+	box-shadow: 3px 3px 3px lightgrey;
+}
+textarea:focus{
+	border: solid 3px black;
+	box-shadow: 3px 3px 3px lightgrey;
 }
 textarea{
-	width: 210px;
+	width: 400px;
+	height: 75px;
 	margin-bottom: 9px;
-	box-shadow: 3px 3px 3px lightgrey;
+	border-radius: 3px;
 }
 .copy{
 	color:white;
@@ -141,7 +164,7 @@ textarea{
 }
 .progresso2{
 	background-color: black;
-	width: 20%;
+	width: 35%;
 	color:white;
 	height: 12px;
 	font-size: 10px;
@@ -161,7 +184,7 @@ textarea{
 }
 .progresso4{
 	background-color: black;
-	width: 5%;
+	width: 10%;
 	color:white;
 	height: 12px;
 	font-size: 10px;
@@ -171,7 +194,7 @@ textarea{
 }
 .progressosite{
 	background-color: black;
-	width: 40%;
+	width:52.5%;
 	color:white;
 	height: 12px;
 	font-size: 10px;
@@ -188,17 +211,9 @@ textarea{
 	padding-bottom: 1px;
 	margin-bottom: 20px;
 }
-.left{
-	float: left;
-	margin-right: -25px;
-	padding-left: 50px;
-}
-.right{
-	float: right;
-	padding-right: 60px;
-	margin-left: -25px;
-
+section:nth-child(5){
+	margin-bottom: 30px;
 }
 footer{
-	margin-top: 375px;
+	margin-top: 30px;
 }
