--- a/estilo.css
+++ b/estilo.css
@@ -34,11 +34,14 @@ a:hover{
 	width: 15%;
 	border-radius: 50%;
 	margin-top: 25px;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 	box-shadow: 10px 10px 5px darkgrey;
 }
 img[class=perfil]:hover{
-	width: 20%;
+	-webkit-transform:scale(1.3); /* prefixo para browsers webkit */
+    -moz-transform:scale(1.3); /* prefixo para browsers gecko */
+    -o-transform:scale(1.3); /* prefixo para opera */
+    transform:scale(1.3);
 }
 h1{
 	font-size: 70px;
@@ -65,10 +68,18 @@ form>p{
 	color:#fff;
 }
 div[class="col-1-4"] a img:hover{
-	box-shadow: 3px 3px 3px lightgrey;
+	box-shadow: 0 0 15px lightgrey;
+	-webkit-transform:scale(1.2); /* prefixo para browsers webkit */
+    -moz-transform:scale(1.2); /* prefixo para browsers gecko */
+    -o-transform:scale(1.2); /* prefixo para opera */
+    transform:scale(1.2);
 }
 div[class="col-1-4"] a img{
 	border-radius: 5px;
+	margin: 20px;
+}
+div[class="grid grid-pad"]{
+	padding-right: 40px;
 }
 .b4{
 	font-size: 25px;
