--- a/estilo.css
+++ b/estilo.css
@@ -38,10 +38,7 @@ a:hover{
 	box-shadow: 10px 10px 5px darkgrey;
 }
 img[class=perfil]:hover{
-	-webkit-transform:scale(1.3); /* prefixo para browsers webkit */
-    -moz-transform:scale(1.3); /* prefixo para browsers gecko */
-    -o-transform:scale(1.3); /* prefixo para opera */
-    transform:scale(1.3);
+	width:20%;
 }
 h1{
 	font-size: 70px;
